# state-machines

./: .gitignore  README.md  state-machines.cabal
src/Data/: Automata.hs  StateMachine.hs
src/Data/Automata/: Classes.hs  DFA.hs  Moore.hs  NFA.hs  Regex.hs
src/Data/StateMachine/: Classes.hs  DFA.hs  MooreMachine.hs  NFA.hs  Regex.hs
src/Data/StateMachine/Regex/: Binary.hs
