name:                state-machines
version:             0.1.0.0
-- synopsis:
-- description:
homepage:            https://github.com/lehmacdj/state-machines#readme
license:             BSD3
license-file:        LICENSE
author:              Devin Lehmacher
maintainer:          lehmacdj@gmail.com
copyright:           Copyright: (c) 2017 Devin Lehmacher
category:            Miscellaneous
build-type:          Simple
extra-source-files:  README.md
cabal-version:       >=1.10

library
  hs-source-dirs:      src
  exposed-modules:     Data.StateMachine,
                       Data.StateMachine.DFA,
                       Data.StateMachine.NFA,
                       Data.StateMachine.Regex
  build-depends:       base >= 4.7 && < 5,
                       lens,
                       mtl,
                       transformers,
                       containers,
                       free
  default-language:    Haskell2010

executable state-machines-exe
  hs-source-dirs:      app
  main-is:             Main.hs
  ghc-options:         -threaded -rtsopts -with-rtsopts=-N
  build-depends:       base
                     , state-machines
  default-language:    Haskell2010

test-suite state-machines-test
  type:                exitcode-stdio-1.0
  hs-source-dirs:      test
  main-is:             Spec.hs
  build-depends:       base
                     , state-machines
  ghc-options:         -threaded -rtsopts -with-rtsopts=-N
  default-language:    Haskell2010

source-repository head
  type:     git
  location: https://github.com/lehmacdj/state-machines
